--- a/index.html
+++ b/index.html
@@ -562,22 +562,911 @@
 
         // Objeto estoque127 com o layout criado
         const estoque127 = {
-            "dimensions": {
-                "width": 680,
-                "height": 1700
-            },
-            "cabinets": [
-                {
-                    "id": "1",
-                    "type": "grande",
-                    "x": -19,
-                    "y": 629,
-                    "rotation": 270,
-                    "products": {}
-                },
-                // ... (restante dos armários)
-            ]
-        };
+  "dimensions": {
+    "width": 680,
+    "height": 2500
+  },
+  "cabinets": [
+    {
+      "id": "cabinet-1",
+      "type": "pequeno",
+      "x": 14.90625,
+      "y": 1501.9063415527344,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-2",
+      "type": "pequeno",
+      "x": 15.112499237060547,
+      "y": 1461.1313171386719,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-3",
+      "type": "pequeno",
+      "x": 14.799999237060547,
+      "y": 1419.8188247680664,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-4",
+      "type": "pequeno",
+      "x": 14.924999237060547,
+      "y": 1378.9125747680664,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-5",
+      "type": "pequeno",
+      "x": 14.831249237060547,
+      "y": 1337.8188247680664,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-6",
+      "type": "pequeno",
+      "x": 14.706249237060547,
+      "y": 1296.7063217163086,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-7",
+      "type": "pequeno",
+      "x": 14.706249237060547,
+      "y": 1255.7063217163086,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-8",
+      "type": "pequeno",
+      "x": 15.325004577636719,
+      "y": 1214.3438415527344,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-9",
+      "type": "pequeno",
+      "x": 16.006248474121094,
+      "y": 1173.0188293457031,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-10",
+      "type": "pequeno",
+      "x": 16.012500762939453,
+      "y": 1132.0125122070312,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-11",
+      "type": "pequeno",
+      "x": 16.106250762939453,
+      "y": 1091.1312561035156,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-12",
+      "type": "pequeno",
+      "x": 15.8125,
+      "y": 1049.8187713623047,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-13",
+      "type": "pequeno",
+      "x": 16.15625,
+      "y": 1009.1437683105469,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-14",
+      "type": "pequeno",
+      "x": 15.72500228881836,
+      "y": 967.7250213623047,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-15",
+      "type": "pequeno",
+      "x": 15.785736083984375,
+      "y": 926.7768249511719,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-16",
+      "type": "pequeno",
+      "x": 15.883941650390625,
+      "y": 885.8750610351562,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-17",
+      "type": "pequeno",
+      "x": 15.6785888671875,
+      "y": 844.6786193847656,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-18",
+      "type": "pequeno",
+      "x": 15.77679443359375,
+      "y": 802.7857360839844,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-19",
+      "type": "pequeno",
+      "x": 15.77679443359375,
+      "y": 761.7857360839844,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-20",
+      "type": "pequeno",
+      "x": 15.6785888671875,
+      "y": 720.6785888671875,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-21",
+      "type": "pequeno",
+      "x": 15.89288330078125,
+      "y": 678.8928833007812,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-22",
+      "type": "grande",
+      "x": -13.962493896484375,
+      "y": 607,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-23",
+      "type": "grande",
+      "x": -13.86248779296875,
+      "y": 505.1125030517578,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-24",
+      "type": "grande",
+      "x": -14.975006103515625,
+      "y": 402,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-25",
+      "type": "grande",
+      "x": -15.677093505859375,
+      "y": 300.32640075683594,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-26",
+      "type": "grande",
+      "x": -16.555572509765625,
+      "y": 197.43751525878906,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-27",
+      "type": "grande",
+      "x": -16.66668701171875,
+      "y": 95.32640075683594,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-28",
+      "type": "pequeno",
+      "x": 171.5,
+      "y": 1550.5,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-29",
+      "type": "pequeno",
+      "x": 171.5,
+      "y": 1509.5,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-30",
+      "type": "pequeno",
+      "x": 171.59375,
+      "y": 1468.59375,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-31",
+      "type": "pequeno",
+      "x": 171.609375,
+      "y": 1427.609375,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-32",
+      "type": "pequeno",
+      "x": 171.609375,
+      "y": 1386.59375,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-33",
+      "type": "pequeno",
+      "x": 171.5,
+      "y": 1345.5,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-34",
+      "type": "pequeno",
+      "x": 171.5,
+      "y": 1304.5,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-35",
+      "type": "pequeno",
+      "x": 171.5,
+      "y": 1263.5,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-36",
+      "type": "pequeno",
+      "x": 172.0078125,
+      "y": 1223.015625,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-37",
+      "type": "pequeno",
+      "x": 171.90625,
+      "y": 1181.90625,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-38",
+      "type": "pequeno",
+      "x": 171.703125,
+      "y": 1141.703125,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-39",
+      "type": "pequeno",
+      "x": 170.90625,
+      "y": 1099.90625,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-40",
+      "type": "pequeno",
+      "x": 171.90625,
+      "y": 1058.90625,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-41",
+      "type": "pequeno",
+      "x": 172.6953125,
+      "y": 1017.6953125,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-42",
+      "type": "pequeno",
+      "x": 172.50625610351562,
+      "y": 976.5062713623047,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-43",
+      "type": "pequeno",
+      "x": 172.7062530517578,
+      "y": 935.7062606811523,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-44",
+      "type": "pequeno",
+      "x": 172.8125,
+      "y": 894.8187713623047,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-45",
+      "type": "pequeno",
+      "x": 172.81875610351562,
+      "y": 853.8062591552734,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-46",
+      "type": "pequeno",
+      "x": 172.90625,
+      "y": 812.9062805175781,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-47",
+      "type": "pequeno",
+      "x": 172.80625915527344,
+      "y": 771.8125152587891,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-48",
+      "type": "pequeno",
+      "x": 173.00625610351562,
+      "y": 731.0125122070312,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-49",
+      "type": "grande",
+      "x": 143.88394165039062,
+      "y": 628.8928985595703,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-50",
+      "type": "grande",
+      "x": 143.34823608398438,
+      "y": 527.3571624755859,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-51",
+      "type": "grande",
+      "x": 142.89288330078125,
+      "y": 425.8839416503906,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-52",
+      "type": "grande",
+      "x": 142.77679443359375,
+      "y": 323.7857208251953,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-53",
+      "type": "grande",
+      "x": 142.45538330078125,
+      "y": 222.46429061889648,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-54",
+      "type": "grande",
+      "x": 142.11251831054688,
+      "y": 121.11250305175781,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-55",
+      "type": "pequeno",
+      "x": 231.90625,
+      "y": 1550.9063415527344,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-56",
+      "type": "pequeno",
+      "x": 232.11874389648438,
+      "y": 1510.1250762939453,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-57",
+      "type": "pequeno",
+      "x": 231.90625,
+      "y": 1468.9063262939453,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-58",
+      "type": "pequeno",
+      "x": 232.01876831054688,
+      "y": 1428.0125732421875,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-59",
+      "type": "pequeno",
+      "x": 232.00625610351562,
+      "y": 1387.0125732421875,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-60",
+      "type": "pequeno",
+      "x": 232.00625610351562,
+      "y": 1346.0188293457031,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-61",
+      "type": "pequeno",
+      "x": 232.01251220703125,
+      "y": 1305.0188293457031,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-62",
+      "type": "pequeno",
+      "x": 232.00625610351562,
+      "y": 1264.0188293457031,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-63",
+      "type": "pequeno",
+      "x": 232.90625,
+      "y": 1222.9063415527344,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-64",
+      "type": "pequeno",
+      "x": 232.90625,
+      "y": 1181.9063262939453,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-65",
+      "type": "pequeno",
+      "x": 232.90625,
+      "y": 1140.9063262939453,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-66",
+      "type": "pequeno",
+      "x": 232.90625,
+      "y": 1099.906265258789,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-67",
+      "type": "pequeno",
+      "x": 232.90625,
+      "y": 1058.9062805175781,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-68",
+      "type": "pequeno",
+      "x": 233.703125,
+      "y": 1017.703125,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-69",
+      "type": "pequeno",
+      "x": 232.90625,
+      "y": 976.9062652587891,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-70",
+      "type": "pequeno",
+      "x": 232.90625,
+      "y": 935.9062652587891,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-71",
+      "type": "pequeno",
+      "x": 234.5,
+      "y": 894.5124969482422,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-72",
+      "type": "pequeno",
+      "x": 234.39376831054688,
+      "y": 853.4062347412109,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-73",
+      "type": "pequeno",
+      "x": 234.30001831054688,
+      "y": 812.2999877929688,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-74",
+      "type": "pequeno",
+      "x": 234.5,
+      "y": 771.4999847412109,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-75",
+      "type": "pequeno",
+      "x": 233.80624389648438,
+      "y": 730.8062591552734,
+      "rotation": 270,
+      "products": {}
+    },
+    {
+      "id": "cabinet-76",
+      "type": "grande",
+      "x": 204.7857666015625,
+      "y": 628.7768249511719,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-77",
+      "type": "grande",
+      "x": 204.982177734375,
+      "y": 527.9910888671875,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-78",
+      "type": "grande",
+      "x": 203.77679443359375,
+      "y": 425.7857360839844,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-79",
+      "type": "grande",
+      "x": 203.77679443359375,
+      "y": 324.7857208251953,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-80",
+      "type": "grande",
+      "x": 203.90179443359375,
+      "y": 222.88393783569336,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-81",
+      "type": "grande",
+      "x": 203.01251220703125,
+      "y": 121.02500915527344,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-82",
+      "type": "grande",
+      "x": 343.25,
+      "y": 1086.25,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-83",
+      "type": "grande",
+      "x": 343.25006103515625,
+      "y": 984.2500457763672,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-84",
+      "type": "grande",
+      "x": 342.6785888671875,
+      "y": 882.6785888671875,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-85",
+      "type": "grande",
+      "x": 342.6785888671875,
+      "y": 781.6786193847656,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-86",
+      "type": "grande",
+      "x": 342.7857666015625,
+      "y": 626.7768249511719,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-87",
+      "type": "grande",
+      "x": 342.89288330078125,
+      "y": 524.8928680419922,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-88",
+      "type": "grande",
+      "x": 342.77679443359375,
+      "y": 423.77679443359375,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-89",
+      "type": "grande",
+      "x": 341.88397216796875,
+      "y": 322.90179443359375,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-90",
+      "type": "grande",
+      "x": 341.77679443359375,
+      "y": 221.78572845458984,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-91",
+      "type": "grande",
+      "x": 340.57501220703125,
+      "y": 120.57500457763672,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-92",
+      "type": "grande",
+      "x": 405.671875,
+      "y": 1085.671875,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-93",
+      "type": "grande",
+      "x": 405.671875,
+      "y": 983.671875,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-94",
+      "type": "grande",
+      "x": 403.6785888671875,
+      "y": 882.6785888671875,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-95",
+      "type": "grande",
+      "x": 404.6785888671875,
+      "y": 781.6786193847656,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-96",
+      "type": "grande",
+      "x": 403.6785888671875,
+      "y": 626.6786193847656,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-97",
+      "type": "grande",
+      "x": 403.7857666015625,
+      "y": 525.7857208251953,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-98",
+      "type": "grande",
+      "x": 403.7857666015625,
+      "y": 423.7857360839844,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-99",
+      "type": "grande",
+      "x": 403.7857666015625,
+      "y": 322.77679443359375,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-100",
+      "type": "grande",
+      "x": 402.77679443359375,
+      "y": 221.78572845458984,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-101",
+      "type": "grande",
+      "x": 403.453125,
+      "y": 121.453125,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-102",
+      "type": "grande",
+      "x": 527,
+      "y": 1073.765625,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-103",
+      "type": "grande",
+      "x": 526,
+      "y": 972.875,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-104",
+      "type": "grande",
+      "x": 525,
+      "y": 871.09375,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-105",
+      "type": "grande",
+      "x": 525,
+      "y": 769.4375,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-106",
+      "type": "grande",
+      "x": 524,
+      "y": 667.421875,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-107",
+      "type": "grande",
+      "x": 89.3125,
+      "y": 0,
+      "rotation": 0,
+      "products": {}
+    },
+    {
+      "id": "cabinet-108",
+      "type": "grande",
+      "x": 191.31594848632812,
+      "y": 0,
+      "rotation": 0,
+      "products": {}
+    },
+    {
+      "id": "cabinet-109",
+      "type": "grande",
+      "x": 293.5243225097656,
+      "y": 0,
+      "rotation": 0,
+      "products": {}
+    },
+    {
+      "id": "cabinet-110",
+      "type": "grande",
+      "x": 520.8839721679688,
+      "y": 22.883926391601562,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-111",
+      "type": "grande",
+      "x": 521.7857666015625,
+      "y": 124.77677917480469,
+      "rotation": 90,
+      "products": {}
+    },
+    {
+      "id": "cabinet-112",
+      "type": "grande",
+      "x": 404.02679443359375,
+      "y": 1188.0268249511719,
+      "rotation": 90,
+      "products": {}
+    }
+  ]
+};
+
+// Para usar na página principal, cole este código
 
         async function realizarBusca() {
             const codigo = document.getElementById('codigo').value.trim();
