--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
         <div class="sidebar">
             <div class="logo">
                 <div class="logo-placeholder">
-                    <i class="fas fa-boxes"></i>
+                    <img src="777777.png" alt="">
                 </div>
             </div>
             
