--- a/index.html
+++ b/index.html
@@ -456,8 +456,8 @@
     <div class="container">
         <!-- Sidebar -->
         <div class="sidebar">
-            <div class="logo">
-                <div class="logo-placeholder">
+            <div class="logo1">
+                <div class="logo-placeholder1">
                     <img src="777777.png" alt="">
                 </div>
             </div>
