--- a/index.html
+++ b/index.html
@@ -1700,3 +1700,79 @@
     </script>
 </body>
 </html>
+
+
+
+    <!-- Modal de Segurança -->
+    <div id="securityModal" style="
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.8);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+    ">
+        <div style="
+            background-color: white;
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            text-align: center;
+            max-width: 400px;
+            width: 90%;
+        ">
+            <h2 style="color: var(--primary-color); margin-bottom: 20px;">Aviso de Segurança</h2>
+            <p style="margin-bottom: 20px; line-height: 1.5;">Os dados contidos neste site são confidenciais. Por este motivo, é exigida uma senha para acesso.</p>
+            <input type="password" id="passwordInput" placeholder="Digite a senha" style="
+                width: calc(100% - 20px);
+                padding: 10px;
+                margin-bottom: 15px;
+                border: 1px solid #ddd;
+                border-radius: 5px;
+                font-size: 16px;
+            ">
+            <button id="accessButton" style="
+                background-color: var(--secondary-color);
+                color: white;
+                padding: 10px 20px;
+                border: none;
+                border-radius: 5px;
+                cursor: pointer;
+                font-size: 16px;
+                transition: background-color 0.3s ease;
+            ">Acessar</button>
+            <p id="errorMessage" style="color: var(--accent-color); margin-top: 10px; display: none;">Senha incorreta. Tente novamente.</p>
+        </div>
+    </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            const securityModal = document.getElementById("securityModal");
+            const passwordInput = document.getElementById("passwordInput");
+            const accessButton = document.getElementById("accessButton");
+            const errorMessage = document.getElementById("errorMessage");
+            const correctPassword = "852-127";
+
+            accessButton.addEventListener("click", function() {
+                if (passwordInput.value === correctPassword) {
+                    securityModal.style.display = "none";
+                } else {
+                    errorMessage.style.display = "block";
+                    passwordInput.value = "";
+                }
+            });
+
+            passwordInput.addEventListener("keypress", function(event) {
+                if (event.key === "Enter") {
+                    accessButton.click();
+                }
+            });
+        });
+    </script>
+</body>
+</html>
+
